--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,6 +1,6 @@
 en:
   bhf:
-    page_title: bhf demo
+    page_title: bhf demo advanced
     platforms:
       location_landmarks:
         title: 
